Fixed the comments alignment and spaces in the candidates page

--- a/qxf2_scheduler/static/css/qxf2_scheduler.css
+++ b/qxf2_scheduler/static/css/qxf2_scheduler.css
@@ -30,7 +30,9 @@ body {
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
     }
-
+.labelbold{
+    font-weight:bold;
+    }
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
@@ -213,3 +215,4 @@ label,
           height: auto;
         }
       }
+
